@@ -12,7 +12,7 @@ using System.Runtime.InteropServices;
 [assembly: AssemblyConfiguration("")]
 [assembly: AssemblyCompany("Ovidiu Ionescu")]
 [assembly: AssemblyProduct("VSDebugPro")]
-[assembly: AssemblyCopyright("©  Copyright 2012 - 2018 Ovidiu Ionescu")]
+[assembly: AssemblyCopyright("©  Copyright 2012 - 2019 Ovidiu Ionescu")]
 [assembly: AssemblyTrademark("")]
 [assembly: AssemblyCulture("")]   
 [assembly: ComVisible(false)]     
