@@ -203,7 +203,7 @@
     <value>image</value>
   </data>
   <data name="ProductCopyright" xml:space="preserve">
-    <value>© Copyright 2012 - 2018 Ovidiu Ionescu</value>
+    <value>© Copyright 2012 - 2019 Ovidiu Ionescu</value>
   </data>
   <data name="Website" xml:space="preserve">
     <value>www.vsdebug.pro</value>
