@@ -1,7 +1,8 @@
-VSDebugPro_3-2-0-0_2018-08-22
+VSDebugPro_3-2-0-1_2019-03-23
 
     [+] Enabled install for VS2019
 	[*] Updated AddEntry method for the commands history buffer
+	[*] Updated copyright
 
 VSDebugPro_3-2-0-0_2018-08-22
 
